# adinsight-agent

./: .env.example  .gitignore  .sqlfluff  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.en.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/eval/: build_text2sql_failure_improvement_model.py  render_text2sql_eval_chart.py  run_campaign_roas_baseline.py  run_campaign_roas_model.py  run_campaign_roas_scoring.py  run_expected_sql.py  run_text2sql_negative_eval.py  run_text2sql_v2_eval.py  run_text2sql_v2_strict_eval.py  summarize_text2sql_audit.py  text2sql_model_scoring.py  text2sql_negative_questions.yml  (+2 more)
api/: __init__.py  main.py  schemas.py
dags/: dag_campaign_roas_prediction_daily.py  dag_ig_backfill.py  dag_ig_collect_daily.py  dag_ig_collect_round1.py  dag_ig_collect_smoke.py  sample_smoke_test.py
data_generation/: README.md
dbt/: dbt_project.yml  profiles.example.yml
docs/: 01_beginner.md  02_intermediate.md  03_complete.md  adinsight_portfolio_submission_ko.docx  adinsight_portfolio_submission_ko.html  adinsight_portfolio_template.md  adinsight_project_blueprint.md  daily_log.md  demo_script_3min.md  glossary_deep_dive.md  interview_flashcards.md  interview_talking_points.md  korean_company_portfolio_submission.md  korean_job_application_snippets.md  portfolio_draft.md  portfolio_one_pager.md  resume_bullets.md  resume_selected_bullets_ko.md
metrics/: portfolio_metrics.md  recorder.py  run_results.jsonl
scripts/: codex_session_logger.py  start_codex_session.sh
text2sql_gateway/: __init__.py  backends.py  main.py
(+162 files in other folders)
