[project]
name = "adinsight-agent"
version = "0.1.0"
description = "AI-Native data mart and Text2SQL BI agent for influencer advertising analytics"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [{ name = "Yeon" }]

# Phase별로 추가될 런타임 의존성. 부트스트랩 단계에서는 비워둔다.
# - Phase 2: faker, mimesis, sdv, pandas, pyarrow
# - Phase 3: dbt-postgres
# - Phase 6: langchain, langgraph, sqlglot, sentence-transformers, pgvector
# - Phase 7: matplotlib, jinja2, pydantic
dependencies = [
    "apify-client>=2.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "sqlfluff>=3.2",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    "detect-secrets>=1.5",
    "kaggle>=2.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["dbt/target", "dbt/dbt_packages", "logs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line-length는 formatter가 처리

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: integration tests requiring docker stack",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "data_generation", "metrics"]
